Estilizei a pagina de receita com CSS

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
     line-height: 1.6;
-    background-color: cornflowerblue;
+    background-color: #a04000;
     color: #333;
 }
 
@@ -15,6 +15,11 @@ main {
 }
 
 h1 {
+    color: #a04000;
+    text-align: center;
+}
+
+h2 {
     color: #333;
     border-bottom: 2px solid #f4f4f4;
     padding-bottom: 5px;
